--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 @import "./scss/reset_style.module.scss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 
 body{
   background-color: white;
-
 }
 
 .container{
@@ -26,3 +26,37 @@ header{
   @import "./scss/sun_style.module.scss";
 }
 
+.filters{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  input{
+    font-size: 13px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    border: 1px solid black;
+    border-radius: 8px;
+    color: black;
+    height: 45px;
+    width: 265px;
+    background-color: transparent;
+    padding: 15px
+  }
+  select{
+    border: 1px solid black;
+    border-radius: 8px;
+    height: 45px;
+    width: 265px;
+    background-color: transparent;
+    padding: 15px;
+
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url('../public/Vector_for_light.svg');
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+    
+  }
+}
